[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Monster-shoot-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Monster-idle-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Monster-death-Sheet.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 45, 54 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 45, 0, 45, 54 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 90, 0, 45, 54 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 90, 0, 45, 54 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 135, 0, 45, 54 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 45, 54 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 55, 60 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 55, 0, 55, 60 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 110, 0, 55, 60 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 165, 0, 55, 60 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "attacking",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 12.2448, 21.5084 )

[sub_resource type="CircleShape2D" id=13]
radius = 174.791

[node name="enemy" type="KinematicBody2D"]
collision/safe_margin = 1.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.793701, 4.36536 )
frames = SubResource( 11 )
animation = "idle"
frame = 2
playing = true

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0.657898, 3.28954 )
shape = SubResource( 12 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.205227, 2.05226 )
shape = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( -0.615677, -10.056 )

[node name="RayCast" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCast"]
position = Vector2( 1.02613, -5.33586 )
scale = Vector2( 1, 0.5 )
enabled = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
